Fix layout bug

--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@
 
 #root {
   box-sizing: border-box;
-  max-width: 100dvw;
+  max-width: 100vw;
   margin: 0;
   padding: 2rem;
 }
