--- a/src/components/Table/Table.css
+++ b/src/components/Table/Table.css
@@ -4,7 +4,7 @@
   --lt-grey: #eaeaea;
   --lt-blue: #ecfdff;
   margin: 0;
-  min-width: 80dvw;
+  min-width: 80vw;
 }
 
 .person-admin-cell {
